tests/fixtures/positive/architecture/package-dependency-cycle/settings.gradle.kts
rootProject.name = "package-dependency-cycle-positive"

include(":app")
