tests/fixtures/negative/architecture/package-dependency-cycle/settings.gradle.kts
rootProject.name = "package-dependency-cycle-negative"

include(":app")
